features: add instantiate chaincode
